part 3: reply dilipat. fix contrast & layout: comment input. bug: reply all = 0. in process: mix all reply & reply.

--- a/css/templates/user/comment.css
+++ b/css/templates/user/comment.css
@@ -25,6 +25,11 @@
     display: grid;
     padding-bottom: 10px;
 }
+textarea#message {
+    color: #666;
+    font-size:1rem;
+    padding:3px 6px;
+}
 .comment #message, .comment-result #message {
     height: 140px;
     width: 600px;
@@ -49,6 +54,7 @@
     padding: 10px 25px;
     margin-top: 20px;
     display: none;
+    scroll-margin: 60px;
 }
 .comment.comment-reply #message {
     width: 450px;
